[workspace]
members = [
 "advanced-traits",
 "learn-ink/*",
 "merkle-tree/",
 "rust-state-machine/",
 "learn-ink/psp22_example/",
 "learn-ink/psp34_marketplace_example/",
]

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["TheLowLevelers <thelowlevelers@gmail.com>"]
edition = "2021"
repository = "https://github.com/lowlevelers/data-structure.git"
license = "GPL-3.0-only"
